[package]
name = "zec_nam"
version = "0.1.0"
edition = "2021"
authors = ["Zcash-Namada Integration Team"]
description = "Shielded Airdrop Protocol Implementation for Zcash-Namada Integration"

[dependencies]
# Core Zcash dependencies
bellman = "0.14.0"
blake2s_simd = "1.0.3"
halo2_proofs = "0.3.0"
orchard = "0.11.0"
sapling-crypto = "0.5.0"
zcash_primitives = "0.23.0"

# CLI and user interface
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography and utilities
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# File system and persistence
dirs = "5.0"
toml = "0.8"

# Networking and async
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Database (for wallet storage)
sled = "0.34"

# Merkle tree implementation
rs_merkle = "1.4"

[dev-dependencies]
tempfile = "3.0"
